feat:ai module update